[metadata]
# replace with your username:
name = example-pkg-sagar
version = 0.0.1
author = Sagar Bhonde
author_email = sagarbhonde1@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbhonde1/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/sbhonde1/packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
